Bug 284078 - presence shown in contact list is not synced
Summary: presence shown in contact list is not synced
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: contactlist (other bugs)
Version First Reported In: git-latest
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: 0.4.0
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-15 11:41 UTC by Alin M Elena
Modified: 2012-07-06 12:47 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alin M Elena 2011-10-15 11:41:58 UTC
Version:           git-latest (using Devel) 
OS:                Linux

presence shown in contact list is not synced with the now listen plugin

Reproducible: Didn't try

Steps to Reproduce:
...


Expected Results:  
...

OS: Linux (x86_64) release 3.1.0-rc7-3-desktop
Compiler: gcc
Comment 1 Martin Klapetek 2011-10-23 20:07:02 UTC
Git commit f26b493b1cbd2a20647a31e33fc696e5e3d459ae by Martin Klapetek.
Committed on 23/10/2011 at 22:01.
Pushed by mklapetek into branch 'master'.

Use special presence in the contact list global-presence-chooser for 'Now playing...' plugin

Reviewed-by: David Edmundson
REVIEW: 102950
BUG: 284078

M  +17   -1    global-presence-chooser.cpp

http://commits.kde.org/telepathy-contact-list/f26b493b1cbd2a20647a31e33fc696e5e3d459ae