Use special presence in the contact list global-presence-chooser for 'Now playing...' plugin

Reviewed-by: David Edmundson
REVIEW: 102950
BUG: 284078